add NotificationService